engine/tests/fixtures/invalid/db/proj-db-invalid.tg
projection proj_db_invalid {
  name "Invalid DB"
  description "Projection with malformed DB semantics"

  type db_contract
  realizes [entity_db_dummy]
  outputs [db_contract, sql_schema]

  tables {
    entity_missing table dummies
    entity_db_dummy table dummies
    entity_db_dummy table dummies
  }

  columns {
    entity_db_dummy field ghost column ghost_column
  }

  keys {
    entity_db_dummy shard [id]
  }

  indexes {
    entity_db_dummy index []
    entity_db_dummy gin [owner_id]
  }

  relations {
    entity_db_dummy foreign_key ghost references entity_missing.id on_delete explode
  }

  lifecycle {
    entity_db_dummy soft_delete field ghost value archived
    entity_db_dummy timestamps created_at created_at updated_at ghost
  }

  generator_defaults {
    profile mysql_sql
  }

  status active
}
